# linkedmask/Cargo.toml

[package]
name         = "linkedmask"
version      = "0.1.0"

edition      = "2021"
rust-version = "1.56.0"

authors      = ["mochou-p"]
description  = "Customisable dynamically sized bitmask"
readme       = "README.md"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/mochou-p/linkedmask"

keywords     = ["linkedmask", "bitmask", "linkedlist", "dynamic", "customisable"]
categories   = ["data-structures", "rust-patterns", "development-tools"]

[features]
default = []
serde_  = ["serde"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"], optional = true }

[lints.clippy]
all      = "deny"
pedantic = "deny"
nursery  = "forbid"
cargo    = "forbid"

